# lcc-tortoise

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  cdi.xml  create-new-project.sh  flash-lcc-io32-plus.sh  flash-lcc-link.sh  flash-lcc-servo16-plus.sh  flash-lcc-smtc8.sh  flash-lcc-tortoise.sh  prj.conf  west.yml
boards/io32-plus/: Kconfig.io32-plus  board.yml  io32-plus.dts  io32-plus.yaml
boards/lcc_crossinggate/: Kconfig.lcc_crossinggate  board.yml  lcc_crossinggate.dts  lcc_crossinggate.yaml  lcc_crossinggate_defconfig
boards/lcc_link/: Kconfig.lcc_link  board.yml  lcc_link.dts  lcc_link.yaml
boards/lcc_smtc8/: Kconfig.lcc_smtc8  board.yml  lcc_smtc8.dts  lcc_smtc8.yaml  lcc_smtc8_1.overlay  lcc_smtc8_4.overlay  lcc_smtc8_defconfig
boards/lcc_tortoise/: Kconfig.lcc_tortoise  board.yml  lcc_tortoise.dts  lcc_tortoise.yaml  lcc_tortoise_2.overlay
boards/lcc_tortoise/doc/: index.rst
boards/lcc_tortoise_p2/: board.yml  lcc_tortoise.dts  lcc_tortoise_2.dts  lcc_tortoise_2.overlay  lcc_tortoise_2_defconfig  lcc_tortoise_3.overlay
boards/servo-tc16/: Kconfig.servo-tc16  board.yml  servo-tc16.dts  servo-tc16.yaml
bootloader/: STM32G0B1CBTX_FLASH.ld  STM32G0B1CBTX_RAM.ld  bootloader-rm.ioc
bootloader-prebuild/: bootloader-rm.hex
bootloader/Core/Inc/: bootloader.h
bootloader/Core/Src/: bootloader.c  main.c  stm32g0xx_hal_msp.c
common/: adc_utils.c  adc_utils.h  configuration_flusher.c  configuration_flusher.h  dcc-decode-stm32.c  dcc-decode-stm32.h  firmware_upgrade.c  firmware_upgrade.h  partition_utils.c  partition_utils.h
dts/bindings/: dcc-pin.yml  tortoise-gpio.yml
lcc-crossing-gate/: CMakeLists.txt  Kconfig  arduino_uno_r4_defconfig  arduino_uno_r4_minima.overlay  cdi.xml  prj.conf  sysbuild.conf
lcc-crossing-gate/src/: cdi.h  crossing-gate-init.c  crossing-gate-init.h  crossing-gate-structs.c  crossing-gate-structs.h  crossing-gate.c  crossing-gate.h  main.c
lcc-crossing-gate/sysbuild/: lcc-crossing-gate.conf  mcuboot.conf
lcc-io32-plus/: CMakeLists.txt  prj.conf  sysbuild.conf
lcc-io32-plus/src/: main.c
lcc-io32-plus/sysbuild/: mcuboot.conf
lcc-link/: CMakeLists.txt  Kconfig  cdi.xml  prj.conf  sysbuild.conf
lcc-link/src/: can_to_computer.c  can_to_computer.h  cdi.h  computer_to_can.c  computer_to_can.h  dcc-decode-stm32.c  dcc-decode-stm32.h  dcc_to_computer.c  dcc_to_computer.h  firmware-load.c  firmware-load.h  lcc-link-config.h  main.c
lcc-link/sysbuild/: lcc-link.conf  mcuboot.conf
lcc-servo16-plus/: CMakeLists.txt  cdi.xml  lcc-servo16-plus.pem  prj.conf  sysbuild.conf
lcc-servo16-plus/src/: cdi.h  main.c  pca9685_board.c  pca9685_board.h  power-handler.c  power-handler.h  servo16-config.h  servo16-output-state.c  servo16-output-state.h  servo16-state.c
lcc-servo16-plus/src/led-funcs/: led-funcs.h  led-process-fade.c  led-process-onoff.c  led-process-pulse.c
lcc-servo16-plus/sysbuild/: lcc-servo16-plus.conf  mcuboot.conf
lcc-smtc8/: CMakeLists.txt  Kconfig  cdi.xml  prj.conf  sysbuild.conf
lcc-smtc8/src/: birthing.c  birthing.h  dcc-decode-stm32.c  dcc-decode-stm32.h  firmware_upgrade.c  lcc-tortoise-state.c  lcc-tortoise-state.h  main.c  power-handler.c  power-handler.h  switch-tracker.c  switch-tracker.h  tortoise-cdi.c  tortoise-cdi.h  tortoise.c  tortoise.h
lcc-smtc8/sysbuild/: lcc-smtc8.conf  mcuboot.conf
lcc-tortoise/: CMakeLists.txt  prj.conf  sysbuild.conf
lcc-tortoise/src/: dcc-decode-stm32.c  dcc-decode-stm32.h  dcc-decode.c  dcc-decode.h  firmware_upgrade.c  firmware_upgrade.h  lcc-tortoise-state.c  lcc-tortoise-state.h  main.c  power-handler.c  power-handler.h  tortoise-cdi.h  tortoise.c  tortoise.h
lcc-tortoise/sysbuild/: mcuboot.conf
src/: dcc-decode.c  lcc-tortoise-state.c  lcc-tortoise-state.h  main.c  tortoise-cdi.h  tortoise.c  tortoise.h
src/lcc/: CMakeLists.txt  lcc-memory.c
template-files/: CMakeLists.txt
template-files/src/: main.c
zephyr/: module.yml
